--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ idna==2.7
 imagesize==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
+munch==2.3.2
 packaging==18.0
 Pygments==2.2.0
 pyparsing==2.3.0
@@ -15,7 +16,7 @@ requests==2.20.1
 six==1.11.0
 snowballstemmer==1.2.1
 Sphinx==1.8.1
-sphinx-markdown-builder==0.1.2
+sphinx-markdown-builder==0.1.3
 sphinxcontrib-websupport==1.1.0
 typing==3.6.6
 urllib3==1.24.1
