Fixed missing deps

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ packaging==18.0
 Pygments==2.2.0
 pyparsing==2.3.0
 pytz==2018.7
+PyYAML==3.13
 requests==2.20.1
 six==1.11.0
 snowballstemmer==1.2.1
