--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,25 @@
 alabaster==0.7.12
 Babel==2.6.0
-certifi==2018.10.15
+certifi==2018.11.29
 chardet==3.0.4
 docutils==0.14
-idna==2.7
+html2text==2018.1.9
+idna==2.8
 imagesize==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
 munch==2.3.2
-packaging==18.0
+packaging==19.0
 pydash==4.7.4
-Pygments==2.2.0
-pyparsing==2.3.0
-pytz==2018.7
+Pygments==2.3.1
+pyparsing==2.3.1
+pytz==2018.9
 PyYAML==3.13
-requests==2.20.1
-six==1.11.0
+requests==2.21.0
+six==1.12.0
 snowballstemmer==1.2.1
-Sphinx==1.8.1
-sphinx-markdown-builder==0.1.6
+Sphinx==1.8.3
+sphinx-markdown-builder==0.2.0
 sphinxcontrib-websupport==1.1.0
 typing==3.6.6
 urllib3==1.24.1
