--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
-alabaster==0.7.12
-Babel==2.6.0
-certifi==2018.11.29
-chardet==3.0.4
-docutils==0.14
-html2text==2018.1.9
-idna==2.8
-imagesize==1.1.0
-Jinja2==2.10
-MarkupSafe==1.1.0
-munch==2.3.2
-packaging==19.0
-pydash==4.7.4
-Pygments==2.3.1
-pyparsing==2.3.1
-pytz==2018.9
-PyYAML==5.1
-requests==2.21.0
-six==1.12.0
-snowballstemmer==1.2.1
+alabaster>=0.7.12
+Babel>=2.6.0
+certifi>=2018.11.29
+chardet>=3.0.4
+docutils>=0.14
+html2text>=2018.1.9
+idna>=2.8
+imagesize>=1.1.0
+Jinja2>=2.10.1
+MarkupSafe>=1.1.0
+munch>=2.3.2
+packaging>=19.0
+pydash>=4.7.4
+Pygments>=2.3.1
+pyparsing>=2.3.1
+pytz>=2018.9
+PyYAML>=5.1
+requests>=2.21.0
+six>=1.12.0
+snowballstemmer>=1.2.1
 Sphinx>=1.8.3
-sphinx-markdown-builder==0.4.0
-sphinxcontrib-websupport==1.1.0
-typing==3.6.6
-urllib3==1.24.2
+sphinx-markdown-builder>=0.5.3
+sphinxcontrib-websupport>=1.1.0
+typing>=3.6.6
+urllib3>=1.24.2
